[package]
name = "dynamic-winapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "heapapi", "memoryapi", "psapi", "winbase"] }
obfstr = "0.3"

